--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@
         margin-right: 450px;
         margin-left: 450px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        height: 100%;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        padding-left: 30px;
+        padding-right: 30px;
+    
     }
     
     img {
@@ -19,4 +25,8 @@
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         margin: auto;
         display: block;
+    }
+ p {
+        background-color: #380B1F;
+        color: #D6C9B4;
     }
